Referencias ao Capitulo de Implementacao

--- a/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
@@ -1,4 +1,5 @@
 \chapter[Cloud Capacitor]{Cloud Capacitor}
+\label{chap:capacitor}
 % ----------------------------------------------------------
 A partir da especificação do processo de avaliação de capacidade descrita no
 capítulo anterior, bem como dos componentes de suporte a esse processo, apresentamos
