--- a/Dissertacao_Marcelo_Goncalves/capitulos/processo.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/processo.tex
@@ -56,16 +56,16 @@ passa a conhecer então o Espaço de Implantação disponível para os testes de
 desempenho, composto por uma lista de Configurações geradas a partir da lista de
 Tipos de Máquinas Virtuais disponíveis e do número máximo de instâncias.
 
-\section{Componentes}
-O processo de avaliação de capacidade proposto é um processo extensível, ao qual
-devem ser ligados componentes para os quais são delegadas funções de cunho mais
+\section{Atividades Customizáveis}
+O processo de avaliação de capacidade proposto é um processo extensível, do qual
+fazem parte atividade customizáveis para as quais são delegadas funções de cunho mais
 específico, como a comunicação com o Provedor de nuvem e a Aplicação sob Teste
 para fins de orquestração do teste de desempenho, e também funções para as quais
 é desejado um certo grau de flexibilidade a fim de tornar o processo mais adaptável,
 como a escolha das Cargas de Trabalho e Configurações que serão usadas na execução
 da Aplicação.
 
-\subsection{Executor}
+\subsection{Execução dos Testes de Desempenho}
 Todas as atividades ligadas à rotina de execução da Aplicação, desde sua implantação,
 passando pela criação e configuração das máquinas virtuais no ambiente do Provedor 
 de nuvem, bem como pelo controle de inicialização e finalização dessas instâncias, 
@@ -76,15 +76,14 @@ quando necessários. A maneira como esses dados serão de fato obtidos é depend
 da implementação concreta do processo e é irrelevante do ponto de vista do seu 
 funcionamento.  
 
-Entretanto, o processo prevê a existência de um componente chamado Executor, que é 
-o responsável pelas ações necessárias à execução da Aplicação sob Teste no ambiente
-alvo. O Executor deve conhecer os detalhes inerentes à comunicação com o Provedor 
-e com a Aplicação sob Teste e, assim, ser capaz de ordenar a sua execução e coletar
-como resposta os dados de desempenho esperados pelo processo. O componente Executor
-é um dos pontos de extensibilidade oferecidos pelo processo e sua implementação
-concreta está fora do escopo deste trabalho, cujo foco não está na automação de
-execução de testes de qualquer natureza, mas na análise dos dados resultantes dessa 
-execução.
+Portanto, o processo prevê a customização da atividade de Execução do Testes, que será 
+responsável pelas ações necessárias à execução da Aplicação sob Teste no ambiente
+alvo. A atividade customizada deverá conhecer os detalhes inerentes à comunicação com 
+o Provedor e com a Aplicação sob Teste e, assim, ser capaz de ordenar a sua execução e 
+coletar como resposta os dados de desempenho esperados pelo processo. Esse é um dos 
+pontos de extensibilidade oferecidos pelo processo e sua implementação concreta está 
+fora do escopo deste trabalho, cujo foco não está na automação de execução de testes 
+de qualquer natureza, mas na análise dos dados resultantes dessa execução.
 
 \subsection{Estratégias e Heurísticas}
 \label{sec:heuristicas}
@@ -92,10 +91,11 @@ De modo análogo à abordagem adotada em relação às atividade de execução d
 as operações de seleção da Configuração sobre as quais a Aplicação
 sob Teste será executada, bem como a seleção das Cargas de Trabalho a que ela 
 será submetida durante sua execução, não são executadas diretamente pelo processo.
-Nesse caso, são delegadas a um componente que chamamos de Estratégia de Avaliação ou, 
-simplesmente, Estratégia. Seu objetivo é permitir a aplicação de diferentes métodos 
-para a escolha da melhor Configuração e/ou Carga de Trabalho mais adequada aos 
-objetivos da avaliação de capacidade em curso e também ao perfil da Aplicação.
+Nesse caso, são delegadas a uma atividade customizada que chamamos de Estratégia de 
+Avaliação ou, simplesmente, Estratégia. Seu objetivo é permitir a aplicação de 
+diferentes métodos para a escolha da melhor Configuração e/ou Carga de Trabalho 
+mais adequada aos objetivos da avaliação de capacidade em curso e também ao perfil 
+da Aplicação.
 
 Como veremos na seção~\ref{sec:funcionamento_processo}, em diversas oportunidades
 durante a execução do processo se faz necessária a seleção de uma Configuração de
@@ -202,17 +202,17 @@ da técnica de inferência. A eficácia e efetividade da aplicação das heurís
 Para efeito de entendimento do funcionamento geral do processo de avaliação de 
 capacidade ora proposto, podemos abstrair temporariamente o comportamento das 
 Heurísticas. Esta é, aliás, outra vantagem da abordagem adotada de 
-delegação de funções específicas a componentes: além da flexibilidade e 
+delegação de funções específicas a atividades customizadas: além da flexibilidade e 
 adaptabilidade, a abstração dessas operações torna mais fáceis o entendimento, 
-a descrição e a implementação concreta do processo.   
+a descrição e a implementação concreta do processo.
 
 Na Figura~\ref{fig:fig_processo_aval_capacidade}, os blocos em destaque representam
 as operações que o processo espera que sejam executadas por uma Estratégia de 
 Avaliação que implemente as Heurísticas propostas na seção anterior. Os outros 
 blocos referem-se a ações comuns do próprio processo, executadas de maneira 
 idêntica independentemente de qual seja a Aplicação sob Teste ou de qual seja a 
-Estratégia de Avaliação usada. A delegação de funções para o componente Executor 
-não está destacada no diagrama e se dá no passo ``\emph{Execute \& Monitor}'', 
+Estratégia de Avaliação usada. A delegação de funções para a atividade de Execução
+de Testes não está destacada no diagrama e se dá no passo ``\emph{Execute \& Monitor}'', 
 situado aproximadamente no centro da figura.
 
 \subsection{Operações iniciais}
@@ -396,7 +396,7 @@ O ponto de decisão que sucede a marcação das Configurações Candidatas ou Re
 checa se existem Configurações pertencentes ao atual Nível de Capacidade cujas 
 execuções ainda não tenham sido avaliadas para a Carga de Trabalho atual. Se 
 existirem, o Processo volta ao passo de seleção de uma Configuração a partir do 
-Nível de Capacidade e uma nova execução é solicitada ao componente Executor.
+Nível de Capacidade e uma nova execução é solicitada.
 
 Se não existirem Configurações inexploradas para a Carga de Trabalho atual no
 Nível de Capacidade corrente, o Processo buscará por um Nível de Capacidade que 
