--- a/Dissertacao_Marcelo_Goncalves/capitulos/processo.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/processo.tex
@@ -1,4 +1,5 @@
-\chapter[Avaliação de Capacidade]{Avaliação de Capacidade}
+\chapter{Avaliação de Capacidade}
+\label{chap:processo}
 % ----------------------------------------------------------
 Dadas as definições e formalizações propostas no anteriormente, faz-se necessária
 a especificação de uma lógica de manipulação das entidades e operações descritas.
