Introdução do capítulo de implementação

--- a/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
@@ -1,4 +1,4 @@
-\chapter[Cloud Capacitor]{Cloud Capacitor}
+\chapter{Cloud Capacitor}
 \label{chap:capacitor}
 % ----------------------------------------------------------
 A fim de confirmar as hipóteses de eficácia e eficiência do emprego do Processo
@@ -8,6 +8,17 @@ criamos uma implementação concreta de sua especificação na forma de uma bibl
 extensível e de um sistema computacional que demonstra seu funcionamento fazendo
 a avaliação de uma aplicação real em um provedor de nuvem de infraestrutura.
 
+Demos o nome de CloudCapacitor à biblioteca, implementada como uma \emph{gem} da
+linguagem Ruby~\cite{ruby}. Desenvolvemos o sistema computacional Capacitor Web 
+para ser uma interface visual para a utilização do CloudCapacitor, usando 
+o \emph{framework} Ruby on Rails~\cite{rails}.  
+
+Descrevemos a seguir os detalhes da implementação de cada um e como ambos se
+relacionam para oferecer ao usuário a experiência da avaliação de capacidade
+de baixo custo e alta precisão prevista pelo Processo proposto, com uma interface
+amigável e de fácil utilização.
+
+\section{Cloud Capacitor}
 Cloud Capacitor é uma biblioteca para criação de sistemas de avaliação de 
 capacidade em ambientes de nuvem de infraestrutura como serviço. Implementa as
 atividades descritas na especificação do Processo de Avaliação de Capacidade do 
