--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -95,11 +95,23 @@
 	year = {2014}
 }
 @Article{uni4cloud,
-  author = 	 {AmÃ©rico Sampaio and Matheus Cunha and Nabor MendonÃ§a and Marcelo Barros and Thiago Leite and Roberto Costa and Michel Vasconcelos},
-  title = 	 {Uni4Cloud - Uma Abordagem para ImplantaÃ§Ã£o de AplicaÃ§Ãµes sobre MÃºltiplas Nuvens de Infra-estrutura},
-  journal = 	 {Workshop em Clouds, Grids e AplicaÃ§Ãµes - SimpÃ³sio Brasileiro de Redes de Computadores},
+  author = 	 {Américo Sampaio and Matheus Cunha and Nabor Mendonçaa and Marcelo Barros and Thiago Leite and Roberto Costa and Michel Vasconcelos},
+  title = 	 {Uni4Cloud - Uma Abordagem para Implantação de Aplicações sobre Múltiplas Nuvens de Infra-estrutura},
+  journal =  {Workshop em Clouds, Grids e Aplicações - Simpósio Brasileiro de Redes de Computadores},
   year = 	 {2010},
   OPTmonth = 	 {may}
+}
+@Unpublished{ ruby,
+    author = "Yukihiro Matsumoto",
+    title = {The Ruby Language},
+    note = {\url{https://www.ruby-lang.org}},
+    year = {2014}
+}
+@Unpublished{ rails,
+    author = "David Heinemeier Hanson",
+    title = {The Ruby on Rails Framework},
+    note = {\url{https://www.rubyonrails.org}},
+    year = {2014}
 }
 @Unpublished{ ec2,
 	author = "EC2",
