--- a/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/capacitor.tex
@@ -18,17 +18,59 @@ relacionam para oferecer ao usuário a experiência da avaliação de capacidade
 de baixo custo e alta precisão prevista pelo Processo proposto, com uma interface
 amigável e de fácil utilização.
 
-\section{Cloud Capacitor}
-Cloud Capacitor é uma biblioteca para criação de sistemas de avaliação de 
-capacidade em ambientes de nuvem de infraestrutura como serviço. Implementa as
-atividades descritas na especificação do Processo de Avaliação de Capacidade do 
-Capítulo~\ref{chap:processo}, permitindo que sejam customizadas as atividades
+\section{CloudCapacitor}
+CloudCapacitor é uma biblioteca para criação de sistemas de avaliação de 
+capacidade em ambientes de nuvem de infraestrutura como serviço. É a implementação
+completa da especificação do Processo de Avaliação de Capacidade do 
+Capítulo~\ref{chap:processo}, permitindo que sejam customizadas as atividades 
 definidas pelo Processo como pontos de extensão, como as Estratégias de Avaliação
 e o disparo e controle da execução da Aplicação sob Teste.
 
-implementadas lógicas customizadas de avaliação do desempenho resultante
-da execução da Aplicação sob Teste. Essas lógicas são então reconhecidas pelo Cloud 
-Capacitor como Estratégias de Avaliação.
+Vamos iniciar a apresentação do CloudCapacitor pelas classes que compõem a biblioteca
+e suas responsabilidades. Em seguida, veremos como CloudCapacitor auxilia 
+desenvolvedores de software na criação de sistemas de avaliação de capacidade,
+mostrando o fluxo de utilização da biblioteca através de sua interface de programação.
+Depois, falaremos sobre alguns detalhes de implementação da biblioteca, como 
+a solução para representação do Espaço de Implantação e seu papel na execução do
+Processo de Avaliação de Capacidade. Por fim, apresentaremos os pontos de extensão
+da biblioteca, notadamente como implementar um Executor, a classe responsável pelo
+controle de execução da Aplicação sob Teste, e como sobrescrever a Estratégia de
+Avaliação fornecida pela biblioteca a fim de alterar seu comportamento padrão.
+
+Para concluir a apresentação do CloudCapacitor, será mostrada a saída de dados
+fornecida pela biblioteca com as Configurações capazes de executar a
+Aplicação sob Teste em cada uma das Cargas de Trabalho respeitando o SLA definido.
+
+***RASCUNHO***
+CloudCapacitor
+  Diagrama de Classes (UML) / Arquitetura de Componentes
+  Enumeração das classes e suas responsabilidades
+  Fluxo de utilização da biblioteca (caixa preta, interface com o Capacitor)
+  Especificação e Carregamento do Deployment Space
+  Executor - Implementação
+  Estratégia - Descrição da interface
+  Estratégia - Como sobrescrever (Gof Strategy Pattern)
+  Apresentação do resultado da avaliacao
+Capacitor Web
+  Apresentação da interface de entrada
+  Resultados
+  Trace
+  Full Trace
+Resumo e transicao para o proximo capitulo
+***RASCUNHO***
+
+\subsection{Classes e Responsabilidades}
+\label{subsec:classes}
+Ao utilizar a biblioteca CloudCapacitor na construção de um software para avaliação
+de capacidade, o desenvolvedor tem à sua disposição uma classe principal, chamada
+Cacitor. Essa classe fornece o fluxo principal do Processo de Avaliação, com todos
+os seus pontos de decisão e de extensão.
+
+PorémAo instanciar um objeto da classe Capacitor, o desenvolvedor deve atribuir  
+Por padrão, o CloudCapacitor oferece uma Estratégia de Avaliação que implementa 
+uma lógica simples para as Heurísticas de Seleção de Configurações definidas no
+capítulo anterior. Essa lógica pode ser facilmente sobrescrita conforme a necessidade
+do usuário ou o perfil da Aplicação sob Teste.
 
 \begin{figure}[htb]
   \caption{\label{fig_arq_alto_nivel}Arquitetura de alto nível do Cloud Capacitor}
