Configuracoes do documento

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.tex
@@ -29,6 +29,7 @@
 \usepackage{microtype}      % para melhorias de justificação
 \usepackage{amsmath}      % para fórmulas matemáticas
 \usepackage{amssymb}      % para símbolos matemáticos
+\usepackage{listings}     % para listagens de código
 
 % ---
 % Pacotes de citações
@@ -56,7 +57,7 @@
     Citado #1 vezes nas páginas #2.%
   \fi}%
 % ---
-
+\renewcommand{\lstlistingname}{Listagem}
 % ---
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
