Atualizacao do capitulo de related works

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -95,9 +95,9 @@
 	year = {2014}
 }
 @Article{uni4cloud,
-  author = 	 {Américo Sampaio and Matheus Cunha and Nabor Mendonçaa and Marcelo Barros and Thiago Leite and Roberto Costa and Michel Vasconcelos},
-  title = 	 {Uni4Cloud - Uma Abordagem para Implantação de Aplicações sobre Múltiplas Nuvens de Infra-estrutura},
-  journal =  {Workshop em Clouds, Grids e Aplicações - Simpósio Brasileiro de Redes de Computadores},
+  author = 	 {Amï¿½rico Sampaio and Matheus Cunha and Nabor Mendonï¿½aa and Marcelo Barros and Thiago Leite and Roberto Costa and Michel Vasconcelos},
+  title = 	 {Uni4Cloud - Uma Abordagem para Implantaï¿½ï¿½o de Aplicaï¿½ï¿½es sobre Mï¿½ltiplas Nuvens de Infra-estrutura},
+  journal =  {Workshop em Clouds, Grids e Aplicaï¿½ï¿½es - Simpï¿½sio Brasileiro de Redes de Computadores},
   year = 	 {2010},
   OPTmonth = 	 {may}
 }
@@ -222,11 +222,25 @@ year = {2010}
 	note= "\url{http://www.spec.org/jvm2008/}",
 	year = "2008"
 }
+@article{scheuner2014cloud,
+  title={Cloud WorkBench-Infrastructure-as-Code Based Cloud Benchmarking},
+  author={Scheuner, Joel and Leitner, Philipp and Cito, Jurgen and Gall, Harald},
+  journal={arXiv preprint arXiv:1408.4565},
+  year={2014}
+}
 @article{cunhacloud,
   title={Cloud Crawler: Um Ambiente Program{\'a}vel para Avaliar o Desempenho de Aplica{\c{c}} oes em Nuvens de Infraestrutura},
   author={Cunha, Matheus and Mendon{\c{c}}a, Nabor and Sampaio, Am{\'e}rico},
   year={2013},
   journal={31o Simp{\'o}sio Brasileiro de Redes de Computadores e Sistemas DistribuÃ­dos â€“ SBRC 2013 },
+}
+@inproceedings{malkowski2010cloudxplor,
+  title={CloudXplor: A tool for configuration planning in clouds based on empirical data},
+  author={Malkowski, S. and Hedwig, M. and Jayasinghe, D. and Pu, C. and Neumann, D.},
+  booktitle={Proceedings of the 2010 ACM Symposium on Applied Computing},
+  pages={391--398},
+  year={2010},
+  organization={ACM}
 }
 @inproceedings{fittkau2012cdosim,
   title={CDOSim: Simulating cloud deployment options for software migration support},
