--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -113,6 +113,12 @@
     note = {\url{https://www.rubyonrails.org}},
     year = {2014}
 }
+@Unpublished{yml,
+    author = "YAML",
+    title = {YAML Specification},
+    note = {\url{http://www.yaml.org/spec/1.2/spec.html}},
+    year = {2009}
+}
 @Unpublished{ ec2,
 	author = "EC2",
 	title = {Amazon Elastic Compute Cloud},
@@ -232,7 +238,7 @@ year = {2010}
   title={Cloud Crawler: Um Ambiente Program{\'a}vel para Avaliar o Desempenho de Aplica{\c{c}} oes em Nuvens de Infraestrutura},
   author={Cunha, Matheus and Mendon{\c{c}}a, Nabor and Sampaio, Am{\'e}rico},
   year={2013},
-  journal={31o Simp{\'o}sio Brasileiro de Redes de Computadores e Sistemas Distribuídos – SBRC 2013 },
+  journal={31o Simp{\'o}sio Brasileiro de Redes de Computadores e Sistemas Distribu{\'i}dos – SBRC 2013 },
 }
 @inproceedings{malkowski2010cloudxplor,
   title={CloudXplor: A tool for configuration planning in clouds based on empirical data},
